pt-testing-camera: update on page transitions. update photo gallery. added photo removal

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ColorFulMeApplication",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Team Sentinel - Hackaton 2023",
+  "homepage": "https://ColorFulMeApplication.com/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
