--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
-    "@capacitor/android": "5.1.1",
+    "@capacitor/android": "^5.1.1",
     "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.6",
     "@capacitor/core": "5.1.1",
@@ -46,7 +46,7 @@
     "@angular-eslint/eslint-plugin-template": "^16.0.0",
     "@angular-eslint/schematics": "^16.0.0",
     "@angular-eslint/template-parser": "^16.0.0",
-    "@angular/cli": "^16.0.0",
+    "@angular/cli": "^16.1.8",
     "@angular/compiler": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
